[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.18" 
volatile = "0.2.7"
spin = "0.5.1" # use the simplest lock
# the newsest version  0.10.12 causes errors
x86_64 = "0.14.2"
# use this crate to invoke "in" and "out" instructions
uart_16550 = "0.2.0"
# serial port
pic8259 = "0.10.1"
# keyboard
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
# to ease the use of global static var with non-const functions

# 由于no_std环境中, 原有的用于在编译器fail时创建栈展开环境的eh_personality语言项也没有被实现
# 因此, 我们需要手动禁用栈展开, 因为反正现阶段我们也无需通过复杂的异常处理机制和栈展开来实现父进程的运行 
# https://manishearth.github.io/blog/2017/01/11/rust-tidbits-what-is-a-lang-item/,  https://stackoverflow.com/questions/48982154/where-is-eh-personality-called

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
# 需要让qemu通过isa-debug-exit设备实现自动从系统退出, 而不是陷入测试函数的死循环中
test-success-exit-code = 33  # 与QemuExitCode中的计算结果对应
test-timeout = 100 # 防止卡在loop里的测试一直阻塞test

[[test]]
name = "stack_overflow"
harness = false
# 只有一个test case函数时可以设置这个字段以去掉test_runner, 并在_start中直接测试